<resources>
    <string name="app_name">Task1</string>
    <string name="register">Register</string>
    <string name="Email">Email Address</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
</resources>